# mobileRobDev

./: CMakeLists.txt  README.md  package.xml
config/: joy.yaml  laser_filter.yaml  localization_params.yaml  mapper_params_online_async_yolo.yaml  nav2_params.yaml  robot_parameters.yaml
docker/: Dockerfile.robovisor
include/robovisor/: definitions.hpp  robot.hpp  robot_system.hpp
include/zlac/: robot.hpp  robot_system.hpp  zlac.hpp
launch/core/: joystick.launch.py  map_saver.launch.py  navigation.launch.py  navigation_light.launch.py  publisher.launch.py  slam.launch.py  yolo.launch.py  yolo_general.launch.py  yolo_mapping.launch.py  yolo_robot.launch.py  yolo_robot_movebase.launch.py  yolo_zed.launch.py
launch/real/: rplidar.launch.py
maps/: piso01.pgm  piso01.yaml  piso01v8.pgm  piso01v8.yaml
maps/dc_2_zlac/: dc_2_zlac.pgm  dc_2_zlac.yaml
maps/yolo_maps/lidar/: map_1_filter.pgm  map_1_filter.yaml  map_1_lidar.pgm  map_1_lidar.yaml  map_2_filter.pgm  map_2_filter.yaml
maps/yolo_maps/zed/: map_1_zed.pgm  map_1_zed.yaml  map_2.pgm  map_2.yaml  map_3.pgm  map_3.yaml  map_4.pgm  map_4.yaml  my_map.pgm  my_map.yaml
rviz/: localization.rviz  nav2.rviz  nav2_yolo.rviz  slam.rviz  view.rviz
scripts/: camera_start.bash  odom_dump.cpp  runRobot.bash  saveMap.bash
src/robovisor/: robot.cpp  robot_main.cpp  robot_system.cpp
src/zlac/: robot.cpp  robot_main.cpp  robot_system.cpp  zlac.cpp
urdf/robo_dc/: robo_dc.urdf.xacro
urdf/robo_dc/components/: robo_dc_camera.xacro  robo_dc_laser.xacro
urdf/robo_dc/gazebo/: robo_dc_gazebo.xacro
urdf/robo_dc/includes/: robo_dc_constants.xacro
utils/: plot.gnu  plot.sh
